--- a/home/dots/waybar/colors.css
+++ b/home/dots/waybar/colors.css
@@ -2,105 +2,105 @@
 * Css Colors
 * Generated with Matugen
 */
-@define-color blur_background rgba(19, 19, 24, 0.3);
-@define-color blur_background8 rgba(19, 19, 24, 0.8);
+@define-color blur_background rgba(26, 17, 16, 0.3);
+@define-color blur_background8 rgba(26, 17, 16, 0.8);
 
-    @define-color background #131318;
+    @define-color background #1a1110;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #303036;
+    @define-color inverse_on_surface #392e2c;
 
-    @define-color inverse_primary #535a92;
+    @define-color inverse_primary #904b3d;
 
-    @define-color inverse_surface #e4e1e9;
+    @define-color inverse_surface #f1dfdb;
 
-    @define-color on_background #e4e1e9;
+    @define-color on_background #f1dfdb;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #252b61;
+    @define-color on_primary #561f14;
 
-    @define-color on_primary_container #dfe0ff;
+    @define-color on_primary_container #ffdad3;
 
-    @define-color on_primary_fixed #0e154b;
+    @define-color on_primary_fixed #3a0a03;
 
-    @define-color on_primary_fixed_variant #3b4279;
+    @define-color on_primary_fixed_variant #733427;
 
-    @define-color on_secondary #2d2f42;
+    @define-color on_secondary #442a24;
 
-    @define-color on_secondary_container #e0e0f9;
+    @define-color on_secondary_container #ffdad3;
 
-    @define-color on_secondary_fixed #181a2c;
+    @define-color on_secondary_fixed #2c1510;
 
-    @define-color on_secondary_fixed_variant #444559;
+    @define-color on_secondary_fixed_variant #5d3f39;
 
-    @define-color on_surface #e4e1e9;
+    @define-color on_surface #f1dfdb;
 
-    @define-color on_surface_variant #c7c5d0;
+    @define-color on_surface_variant #d8c2bd;
 
-    @define-color on_tertiary #45263c;
+    @define-color on_tertiary #3d2f04;
 
-    @define-color on_tertiary_container #ffd7ef;
+    @define-color on_tertiary_container #f9e0a6;
 
-    @define-color on_tertiary_fixed #2d1127;
+    @define-color on_tertiary_fixed #241a00;
 
-    @define-color on_tertiary_fixed_variant #5e3c54;
+    @define-color on_tertiary_fixed_variant #554519;
 
-    @define-color outline #91909a;
+    @define-color outline #a08c88;
 
-    @define-color outline_variant #46464f;
+    @define-color outline_variant #534340;
 
-    @define-color primary #bcc2ff;
+    @define-color primary #ffb4a5;
 
-    @define-color primary_container #3b4279;
+    @define-color primary_container #733427;
 
-    @define-color primary_fixed #dfe0ff;
+    @define-color primary_fixed #ffdad3;
 
-    @define-color primary_fixed_dim #bcc2ff;
+    @define-color primary_fixed_dim #ffb4a5;
 
     @define-color scrim #000000;
 
-    @define-color secondary #c4c5dd;
+    @define-color secondary #e7bdb4;
 
-    @define-color secondary_container #444559;
+    @define-color secondary_container #5d3f39;
 
-    @define-color secondary_fixed #e0e0f9;
+    @define-color secondary_fixed #ffdad3;
 
-    @define-color secondary_fixed_dim #c4c5dd;
+    @define-color secondary_fixed_dim #e7bdb4;
 
     @define-color shadow #000000;
 
-    @define-color source_color #171c43;
+    @define-color source_color #9d3c29;
 
-    @define-color surface #131318;
+    @define-color surface #1a1110;
 
-    @define-color surface_bright #39393f;
+    @define-color surface_bright #423734;
 
-    @define-color surface_container #1f1f25;
+    @define-color surface_container #271d1b;
 
-    @define-color surface_container_high #29292f;
+    @define-color surface_container_high #322826;
 
-    @define-color surface_container_highest #34343a;
+    @define-color surface_container_highest #3d3230;
 
-    @define-color surface_container_low #1b1b21;
+    @define-color surface_container_low #231917;
 
-    @define-color surface_container_lowest #0d0e13;
+    @define-color surface_container_lowest #140c0a;
 
-    @define-color surface_dim #131318;
+    @define-color surface_dim #1a1110;
 
-    @define-color surface_tint #bcc2ff;
+    @define-color surface_tint #ffb4a5;
 
-    @define-color surface_variant #46464f;
+    @define-color surface_variant #534340;
 
-    @define-color tertiary #e7b9d6;
+    @define-color tertiary #dcc48c;
 
-    @define-color tertiary_container #5e3c54;
+    @define-color tertiary_container #554519;
 
-    @define-color tertiary_fixed #ffd7ef;
+    @define-color tertiary_fixed #f9e0a6;
 
-    @define-color tertiary_fixed_dim #e7b9d6;
+    @define-color tertiary_fixed_dim #dcc48c;
