--- a/home/dots/waybar/colors.css
+++ b/home/dots/waybar/colors.css
@@ -2,105 +2,105 @@
 * Css Colors
 * Generated with Matugen
 */
-@define-color blur_background rgba(26, 17, 16, 0.3);
-@define-color blur_background8 rgba(26, 17, 16, 0.8);
+@define-color blur_background rgba(17, 20, 24, 0.3);
+@define-color blur_background8 rgba(17, 20, 24, 0.8);
 
-    @define-color background #1a1110;
+    @define-color background #111418;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #392e2c;
+    @define-color inverse_on_surface #2e3135;
 
-    @define-color inverse_primary #904b3d;
+    @define-color inverse_primary #37618e;
 
-    @define-color inverse_surface #f1dfdb;
+    @define-color inverse_surface #e1e2e8;
 
-    @define-color on_background #f1dfdb;
+    @define-color on_background #e1e2e8;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #561f14;
+    @define-color on_primary #003259;
 
-    @define-color on_primary_container #ffdad3;
+    @define-color on_primary_container #d2e4ff;
 
-    @define-color on_primary_fixed #3a0a03;
+    @define-color on_primary_fixed #001c37;
 
-    @define-color on_primary_fixed_variant #733427;
+    @define-color on_primary_fixed_variant #1b4975;
 
-    @define-color on_secondary #442a24;
+    @define-color on_secondary #253141;
 
-    @define-color on_secondary_container #ffdad3;
+    @define-color on_secondary_container #d7e3f8;
 
-    @define-color on_secondary_fixed #2c1510;
+    @define-color on_secondary_fixed #101c2b;
 
-    @define-color on_secondary_fixed_variant #5d3f39;
+    @define-color on_secondary_fixed_variant #3c4858;
 
-    @define-color on_surface #f1dfdb;
+    @define-color on_surface #e1e2e8;
 
-    @define-color on_surface_variant #d8c2bd;
+    @define-color on_surface_variant #c3c6cf;
 
-    @define-color on_tertiary #3d2f04;
+    @define-color on_tertiary #3b2947;
 
-    @define-color on_tertiary_container #f9e0a6;
+    @define-color on_tertiary_container #f3daff;
 
-    @define-color on_tertiary_fixed #241a00;
+    @define-color on_tertiary_fixed #251431;
 
-    @define-color on_tertiary_fixed_variant #554519;
+    @define-color on_tertiary_fixed_variant #533f5f;
 
-    @define-color outline #a08c88;
+    @define-color outline #8d9199;
 
-    @define-color outline_variant #534340;
+    @define-color outline_variant #43474e;
 
-    @define-color primary #ffb4a5;
+    @define-color primary #a1c9fd;
 
-    @define-color primary_container #733427;
+    @define-color primary_container #1b4975;
 
-    @define-color primary_fixed #ffdad3;
+    @define-color primary_fixed #d2e4ff;
 
-    @define-color primary_fixed_dim #ffb4a5;
+    @define-color primary_fixed_dim #a1c9fd;
 
     @define-color scrim #000000;
 
-    @define-color secondary #e7bdb4;
+    @define-color secondary #bbc7db;
 
-    @define-color secondary_container #5d3f39;
+    @define-color secondary_container #3c4858;
 
-    @define-color secondary_fixed #ffdad3;
+    @define-color secondary_fixed #d7e3f8;
 
-    @define-color secondary_fixed_dim #e7bdb4;
+    @define-color secondary_fixed_dim #bbc7db;
 
     @define-color shadow #000000;
 
-    @define-color source_color #9d3c29;
+    @define-color source_color #2d3540;
 
-    @define-color surface #1a1110;
+    @define-color surface #111418;
 
-    @define-color surface_bright #423734;
+    @define-color surface_bright #36393e;
 
-    @define-color surface_container #271d1b;
+    @define-color surface_container #1d2024;
 
-    @define-color surface_container_high #322826;
+    @define-color surface_container_high #272a2f;
 
-    @define-color surface_container_highest #3d3230;
+    @define-color surface_container_highest #32353a;
 
-    @define-color surface_container_low #231917;
+    @define-color surface_container_low #191c20;
 
-    @define-color surface_container_lowest #140c0a;
+    @define-color surface_container_lowest #0b0e13;
 
-    @define-color surface_dim #1a1110;
+    @define-color surface_dim #111418;
 
-    @define-color surface_tint #ffb4a5;
+    @define-color surface_tint #a1c9fd;
 
-    @define-color surface_variant #534340;
+    @define-color surface_variant #43474e;
 
-    @define-color tertiary #dcc48c;
+    @define-color tertiary #d7bee4;
 
-    @define-color tertiary_container #554519;
+    @define-color tertiary_container #533f5f;
 
-    @define-color tertiary_fixed #f9e0a6;
+    @define-color tertiary_fixed #f3daff;
 
-    @define-color tertiary_fixed_dim #dcc48c;
+    @define-color tertiary_fixed_dim #d7bee4;
