--- a/home/dots/swaync/colors.css
+++ b/home/dots/swaync/colors.css
@@ -2,105 +2,105 @@
 * Css Colors
 * Generated with Matugen
 */
-@define-color blur_background rgba(26, 17, 16, 0.3);
-@define-color blur_background8 rgba(26, 17, 16, 0.8);
+@define-color blur_background rgba(18, 19, 24, 0.3);
+@define-color blur_background8 rgba(18, 19, 24, 0.8);
 
-    @define-color background #1a1110;
+    @define-color background #121318;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #392e2c;
+    @define-color inverse_on_surface #303036;
 
-    @define-color inverse_primary #904b3d;
+    @define-color inverse_primary #4f5b92;
 
-    @define-color inverse_surface #f1dfdb;
+    @define-color inverse_surface #e3e1e9;
 
-    @define-color on_background #f1dfdb;
+    @define-color on_background #e3e1e9;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #561f14;
+    @define-color on_primary #202c61;
 
-    @define-color on_primary_container #ffdad3;
+    @define-color on_primary_container #dde1ff;
 
-    @define-color on_primary_fixed #3a0a03;
+    @define-color on_primary_fixed #07164b;
 
-    @define-color on_primary_fixed_variant #733427;
+    @define-color on_primary_fixed_variant #374379;
 
-    @define-color on_secondary #442a24;
+    @define-color on_secondary #2c2f42;
 
-    @define-color on_secondary_container #ffdad3;
+    @define-color on_secondary_container #dfe1f9;
 
-    @define-color on_secondary_fixed #2c1510;
+    @define-color on_secondary_fixed #171b2c;
 
-    @define-color on_secondary_fixed_variant #5d3f39;
+    @define-color on_secondary_fixed_variant #424659;
 
-    @define-color on_surface #f1dfdb;
+    @define-color on_surface #e3e1e9;
 
-    @define-color on_surface_variant #d8c2bd;
+    @define-color on_surface_variant #c6c5d0;
 
-    @define-color on_tertiary #3d2f04;
+    @define-color on_tertiary #44273f;
 
-    @define-color on_tertiary_container #f9e0a6;
+    @define-color on_tertiary_container #ffd7f3;
 
-    @define-color on_tertiary_fixed #241a00;
+    @define-color on_tertiary_fixed #2c1229;
 
-    @define-color on_tertiary_fixed_variant #554519;
+    @define-color on_tertiary_fixed_variant #5c3d56;
 
-    @define-color outline #a08c88;
+    @define-color outline #90909a;
 
-    @define-color outline_variant #534340;
+    @define-color outline_variant #45464f;
 
-    @define-color primary #ffb4a5;
+    @define-color primary #b8c3ff;
 
-    @define-color primary_container #733427;
+    @define-color primary_container #374379;
 
-    @define-color primary_fixed #ffdad3;
+    @define-color primary_fixed #dde1ff;
 
-    @define-color primary_fixed_dim #ffb4a5;
+    @define-color primary_fixed_dim #b8c3ff;
 
     @define-color scrim #000000;
 
-    @define-color secondary #e7bdb4;
+    @define-color secondary #c3c5dd;
 
-    @define-color secondary_container #5d3f39;
+    @define-color secondary_container #424659;
 
-    @define-color secondary_fixed #ffdad3;
+    @define-color secondary_fixed #dfe1f9;
 
-    @define-color secondary_fixed_dim #e7bdb4;
+    @define-color secondary_fixed_dim #c3c5dd;
 
     @define-color shadow #000000;
 
-    @define-color source_color #9d3c29;
+    @define-color source_color #646a8a;
 
-    @define-color surface #1a1110;
+    @define-color surface #121318;
 
-    @define-color surface_bright #423734;
+    @define-color surface_bright #38393f;
 
-    @define-color surface_container #271d1b;
+    @define-color surface_container #1f1f25;
 
-    @define-color surface_container_high #322826;
+    @define-color surface_container_high #292a2f;
 
-    @define-color surface_container_highest #3d3230;
+    @define-color surface_container_highest #34343a;
 
-    @define-color surface_container_low #231917;
+    @define-color surface_container_low #1b1b21;
 
-    @define-color surface_container_lowest #140c0a;
+    @define-color surface_container_lowest #0d0e13;
 
-    @define-color surface_dim #1a1110;
+    @define-color surface_dim #121318;
 
-    @define-color surface_tint #ffb4a5;
+    @define-color surface_tint #b8c3ff;
 
-    @define-color surface_variant #534340;
+    @define-color surface_variant #45464f;
 
-    @define-color tertiary #dcc48c;
+    @define-color tertiary #e4bad9;
 
-    @define-color tertiary_container #554519;
+    @define-color tertiary_container #5c3d56;
 
-    @define-color tertiary_fixed #f9e0a6;
+    @define-color tertiary_fixed #ffd7f3;
 
-    @define-color tertiary_fixed_dim #dcc48c;
+    @define-color tertiary_fixed_dim #e4bad9;
