--- a/home/dots/wlogout/colors.css
+++ b/home/dots/wlogout/colors.css
@@ -13,94 +13,94 @@
 
     @define-color inverse_on_surface #2c3133;
 
-    @define-color inverse_primary #00677c;
+    @define-color inverse_primary #904a42;
 
-    @define-color inverse_surface #dee3e6;
+    @define-color inverse_surface #f1dedc;
 
-    @define-color on_background #dee3e6;
+    @define-color on_background #f1dedc;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #003641;
+    @define-color on_primary #561e18;
 
-    @define-color on_primary_container #b0ecff;
+    @define-color on_primary_container #ffdad5;
 
-    @define-color on_primary_fixed #001f27;
+    @define-color on_primary_fixed #3b0906;
 
-    @define-color on_primary_fixed_variant #004e5e;
+    @define-color on_primary_fixed_variant #73342c;
 
-    @define-color on_secondary #1d343a;
+    @define-color on_secondary #442926;
 
-    @define-color on_secondary_container #cee7ef;
+    @define-color on_secondary_container #ffdad5;
 
-    @define-color on_secondary_fixed #061e25;
+    @define-color on_secondary_fixed #2c1512;
 
-    @define-color on_secondary_fixed_variant #344a51;
+    @define-color on_secondary_fixed_variant #5d3f3b;
 
-    @define-color on_surface #dee3e6;
+    @define-color on_surface #f1dedc;
 
-    @define-color on_surface_variant #bfc8cb;
+    @define-color on_surface_variant #d8c2be;
 
-    @define-color on_tertiary #2a2e4d;
+    @define-color on_tertiary #3f2e04;
 
-    @define-color on_tertiary_container #dee0ff;
+    @define-color on_tertiary_container #fcdfa6;
 
-    @define-color on_tertiary_fixed #141937;
+    @define-color on_tertiary_fixed #261a00;
 
-    @define-color on_tertiary_fixed_variant #404565;
+    @define-color on_tertiary_fixed_variant #574419;
 
-    @define-color outline #899296;
+    @define-color outline #a08c8a;
 
-    @define-color outline_variant #40484b;
+    @define-color outline_variant #534341;
 
-    @define-color primary #86d1e9;
+    @define-color primary #ffb4aa;
 
-    @define-color primary_container #004e5e;
+    @define-color primary_container #73342c;
 
-    @define-color primary_fixed #b0ecff;
+    @define-color primary_fixed #ffdad5;
 
-    @define-color primary_fixed_dim #86d1e9;
+    @define-color primary_fixed_dim #ffb4aa;
 
     @define-color scrim #000000;
 
-    @define-color secondary #b2cad3;
+    @define-color secondary #e7bdb7;
 
-    @define-color secondary_container #344a51;
+    @define-color secondary_container #5d3f3b;
 
-    @define-color secondary_fixed #cee7ef;
+    @define-color secondary_fixed #ffdad5;
 
-    @define-color secondary_fixed_dim #b2cad3;
+    @define-color secondary_fixed_dim #e7bdb7;
 
     @define-color shadow #000000;
 
-    @define-color source_color #119cb9;
+    @define-color source_color #e04135;
 
     @define-color surface #0f1416;
 
-    @define-color surface_bright #343a3c;
+    @define-color surface_bright #423735;
 
-    @define-color surface_container #1b2022;
+    @define-color surface_container #271d1c;
 
     @define-color surface_container_high #252b2d;
 
-    @define-color surface_container_highest #303638;
+    @define-color surface_container_highest #3d3231;
 
-    @define-color surface_container_low #171c1e;
+    @define-color surface_container_low #231918;
 
-    @define-color surface_container_lowest #090f11;
+    @define-color surface_container_lowest #140c0b;
 
     @define-color surface_dim #0f1416;
 
-    @define-color surface_tint #86d1e9;
+    @define-color surface_tint #ffb4aa;
 
-    @define-color surface_variant #40484b;
+    @define-color surface_variant #534341;
 
-    @define-color tertiary #c0c4eb;
+    @define-color tertiary #dfc38c;
 
-    @define-color tertiary_container #404565;
+    @define-color tertiary_container #574419;
 
-    @define-color tertiary_fixed #dee0ff;
+    @define-color tertiary_fixed #fcdfa6;
 
-    @define-color tertiary_fixed_dim #c0c4eb;
+    @define-color tertiary_fixed_dim #dfc38c;
